# FeynmanDiagramEditor

./: .gitignore  FeynmanDiagramEditor-linux  README.md
sources/: CMakeLists.txt  FeynmanDiagramEditor.pro  diagramviewer.cpp  diagramviewer.h  diagramviewer.hpp  feynmandiagrameditor-setup-windows.iss  latexParser.cpp  latexParser.h  main.cpp  mainwindow.hpp  particle.cpp  particle.h  resource.qrc  resource.rc  updates.cpp  version.h  windowwithclosesignal.hpp
sources/installer/: feynmandiagrameditor-install-linux.sh  feynmandiagrameditor-install-windows.iss  feynmandiagrameditor-portable-linux.sh  feynmandiagrameditor-portable-windows.ps1
